--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,16 @@
 <resources>
     <string name="app_name">Trigger</string>
     <string name="action_settings">Settings</string>
+
+    <string-array name="triggerArray">
+        <item>Time</item>
+        <item>GPS Arrival</item>
+        <item>GPS Departure</item>
+    </string-array>
+
+    <string-array name="actionArray">
+        <item>Reminder</item>
+        <item>SMS</item>
+        <item>Call</item>
+    </string-array>
 </resources>
