--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -41,4 +41,5 @@
         <item>Do Homework</item>
         <item>Text Brian</item>
     </string-array>
+    <string name="title_activity_maps">Map</string>
 </resources>
