--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -42,4 +42,6 @@
         <item>Text Brian</item>
     </string-array>
     <string name="title_activity_maps">Map</string>
+    <string name="find">Find</string>
+    <string name="hint">Enter Place</string>
 </resources>
