--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -21,6 +21,8 @@
     <string name="ok_button">OK</string>
     <string name="edit_button">Edit</string>
     <string name="back_button">Back</string>
+    <string name="gps_network_not_enabled">You must enable Location Services</string>
+    <string name="open_location_settings">Open location settings</string>
     <string-array name="triggerList">
         <item>Call Mom</item>
         <item>Do Homework</item>
